# cursor-web

./: .gitignore  CLAUDE.md  TODO.md
.github/workflows/: release.yml
cursor2api/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  config.yaml.example  deploy.sh  docker-compose.yml  package-lock.json  package.json  tsconfig.json
cursor2api-rust/: .gitignore  CLAUDE.md  Cargo.toml  build.rs  dev.sh
cursor2api-rust/src/: auth.rs  config.rs  keys_db.rs  logger.rs  main.rs  node_service.rs  proxy.rs  state.rs  types.rs
cursor2api-rust/src/routes/: config.rs  keys.rs  logs.rs  mod.rs  models.rs  proxies.rs  sse.rs
cursor2api-rust/static/: index.html
cursor2api-rust/static/assets/: index-BgVax14G.css  index-BofPrN1W.js  index-CChmpCyo.css  index-DBW4gF79.js  index-DaGh5kIk.css  index-PpLzKTGI.js
cursor2api/public/: login.html  logs.css  logs.html  logs.js
cursor2api/src/: config-api.ts  config.ts  constants.ts  converter.ts  cursor-client.ts  handler.ts  index.ts  log-viewer.ts  logger-db.ts  logger.ts  openai-handler.ts  openai-types.ts  proxy-agent.ts  streaming-text.ts  tokenizer.ts  tool-fixer.ts  types.ts  vision.ts
cursor2api/test/: e2e-agentic.mjs  e2e-chat.mjs  e2e-prompt-ab.mjs  e2e-prompt-ab2.mjs  e2e-test.ts  e2e-thinking-truncation.mjs  migrate-jsonl-to-sqlite.mjs  perf-diag-results.json  perf-diag.mjs  test-hybrid-stream.mjs  unit-handler-truncation.mjs  unit-image-paths.mjs  unit-log-persist-compact.mjs  unit-log-persist-default-summary.mjs  unit-logger-db.mjs  unit-openai-chat-input.mjs  unit-openai-compat.mjs  unit-openai-image-file.mjs  unit-openai-log-persistence.mjs  unit-openai-log-summary.mjs  unit-vision.mjs  (+6 more)
(+24 files in other folders)
